--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bedrock-protocol": "^3.47.0",
-    "dotenv": "^17.1.0",
-    "prismarine-auth": "^2.7.0"
-  },
-  "description": ""
+    "bedrock-protocol": "^5.1.0",
+    "express": "^4.18.2"
+  }
 }
